--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
-@import url(http://fonts.googleapis.com/css?family=Shadows+Into+Light);
+/* latin */
+@font-face {
+    font-family: 'Shadows Into Light';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Shadows Into Light'), local('ShadowsIntoLight'), url(https://fonts.gstatic.com/s/shadowsintolight/v7/UqyNK9UOIntux_czAvDQx_ZcHqZXBNQzdcD5.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 body,
 html,
@@ -17,7 +24,7 @@ div.board {
     background-color: brown;
     width: 100%;
     height: 100vh;
-    background: #eab92d;
+    background-image: linear-gradient(-90deg,#feb0bd , #c9febe);
     background: -moz-radial-gradient(center, ellipse cover, #eab92d 57%, #c79810 99%);
     background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(57%, #eab92d), color-stop(99%, #c79810));
     background: -webkit-radial-gradient(center, ellipse cover, #eab92d 57%, #c79810 99%);
@@ -29,9 +36,9 @@ div.board {
 }
 
 div.note {
-    height: 150px;
-    width: 150px;
-    background-color: yellow;
+    height: 250px;
+    width: 250px;
+    background-color: white;
     margin: 2px 0;
     position: absolute;
     cursor: -webkit-grab;
@@ -49,11 +56,11 @@ div.note p {
     font-family: "Shadows Into Light", Arial;
 }
 
-div.note:hover > span {
+div.note:hover>span {
     opacity: 1;
 }
 
-div.note > span {
+div.note>span {
     position: absolute;
     bottom: 2px;
     right: 2px;
@@ -65,30 +72,31 @@ div.note button {
     margin: 2px;
 }
 
-div.note > textarea {
+div.note>textarea {
     height: 75%;
+    width: 75%;
     background: rgba(255, 255, 255, .5);
 }
 
 div.board button {
-  color: #fff;
-  font-size: 14px;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.55);
+    color: #fff;
+    font-size: 14px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.55);
 }
 
 #add {
-  background-color: #5cb85c;
-  height: 3em;
+    background-color: #5cb85c;
+    height: 3em;
 }
 
 #edit {
-  background-color: #337ab7;
+    background-color: #337ab7;
 }
 
 #save {
-  background-color: #5cb85c;
+    background-color: #5cb85c;
 }
 
 #remove {
-  background-color: #d9534f;
+    background-color: #d9534f;
 }
