--- a/src/index.css
+++ b/src/index.css
@@ -24,15 +24,14 @@ div.board {
     background-color: brown;
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(-90deg,#feb0bd , #c9febe);
-    background: -moz-radial-gradient(center, ellipse cover, #eab92d 57%, #c79810 99%);
-    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(57%, #eab92d), color-stop(99%, #c79810));
-    background: -webkit-radial-gradient(center, ellipse cover, #eab92d 57%, #c79810 99%);
-    background: -o-radial-gradient(center, ellipse cover, #eab92d 57%, #c79810 99%);
-    background: -ms-radial-gradient(center, ellipse cover, #eab92d 57%, #c79810 99%);
-    background: radial-gradient(ellipse at center, #eab92d 57%, #c79810 99%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eab92d', endColorstr='#c79810', GradientType=1);
-
+    background: linear-gradient(-90deg, #feb0bd, #c9febe);
+    background: -moz-radial-gradient(center, ellipse cover, #feb0bd 57%, #c9febe 99%);
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(57%, #feb0bd), color-stop(99%, #c9febe));
+    background: -webkit-radial-gradient(center, ellipse cover, #feb0bd 57%, #c9febe 99%);
+    background: -o-radial-gradient(center, ellipse cover, #feb0bd 57%, #c9febe 99%);
+    background: -ms-radial-gradient(center, ellipse cover, #feb0bd 57%, #c9febe 99%);
+    background: radial-gradient(ellipse at center, #feb0bd 57%, #c9febe 99%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#feb0bd', endColorstr='#c9febe', GradientType=1);
 }
 
 div.note {
@@ -73,8 +72,8 @@ div.note button {
 }
 
 div.note>textarea {
-    height: 75%;
-    width: 75%;
+    height: 95%;
+    width: 100%;
     background: rgba(255, 255, 255, .5);
 }
 
